<resources>
    <string name="app_name">PinCode Finder</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="room_no">Room No.</string>
    <string name="locality">Locality/Hostel</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="country">Country*</string>
    <string name="pincode">Pincode</string>
    <string name="address_details">Address details</string>
    <string name="btn">Find PinCode</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="GPSAlertDialogTitle"></string>
    <string name="GPSAlertDialogMessage"></string>
    <string name="action_settings"></string>
    <string name="cancel"></string>
</resources>
